<resources>
    <string name="app_name">Devinez le nombre!</string>
    <string name="lblTitle"> Entrez une valeur entre 1 et 100:</string>
    <string name="btnCompare"> Comparer</string>
    <string name="strGreater"> Veuillez saisir une valeur supérieure.</string>
    <string name="strLower"> Veuillez saisir une valeur inférieure.</string>
    <string name="strCongratulations"> Toutes nos félicitations</string>
    <string name="messageCourrielExistant">Le courriel existe déja, veuillez essayer un autre</string>
    <string name="messageInsertionReussie">Le compte a bien été crée</string>
    <string name="messageDonneesIncorrect">Veuillez vérifier vos données!</string>
    <string name="afficherScore">Afficher les scores</string>
    <string name="quitter">Quiter</string>
    <string name="courriel">Courriel</string>
    <string name="password">Mot de passe</string>
    <string name="CréerCompte">Créer un nouveau compte</string>
    <string name="connexion">Se connecter</string>
    <string name="inscription">Inscription</string>
    <string name="nom">Nom</string>
    <string name="prenom">Prénom</string>
    <string name="errorDonnes">Informations incorrects</string>
    <string name="errorCourriel">Courriel existant</string>
    <string name="success">Bienvenue!</string>
    <string name="retour">Retour</string>
    <string name="strMessage"> Félicitations, vous gagnez aprés % d essais. Voulez-vous réessayer?</string>
    <string name="strYes">Oui</string>
    <string name="strNo">Non</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Accueil -->
    <string name="coordonnees_pizza">Une Pizzeria Quelconque\n
        1234 Rue de Quelqu\'un\n Quebec, QC, G1D 2E3
        \n\+1 418 256-5224 </string>

</resources>