<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="688dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvInscription"
            android:layout_width="match_parent"
            android:layout_height="66dp"
            android:text="@string/inscription" />

        <TextView
            android:id="@+id/tvPrenom"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:text="@string/prenom" />

        <EditText
            android:id="@+id/editPrenom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text=""
            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/tvNom"
            android:layout_width="match_parent"
            android:layout_height="39dp"
            android:text="@string/nom" />

        <EditText
            android:id="@+id/editNom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text=""
            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/tvCourriel"
            android:layout_width="match_parent"
            android:layout_height="39dp"
            android:text="@string/courriel" />

        <EditText
            android:id="@+id/editCourriel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text=""
            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/tvPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password" />

        <EditText
            android:id="@+id/editPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:password="true"
            android:text=""
            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

        <Spinner
            android:id="@+id/simpleSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp" />

        <Button
            android:id="@+id/buttonInscription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/CréerCompte" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>